third_party/move/move-compiler-v2/tests/simplifier-elimination/use_before_assign.exp
// -- Model dump before first bytecode pipeline
module <SELF>_0 {
    private fun main() {
        {
          let x: u64;
          {
            let y: u64 = x;
            Tuple()
          }
        }
    }
} // end <SELF>_0

// -- Sourcified model before first bytecode pipeline
script {
    fun main() {
        let x;
        let y = x;
    }
}


Diagnostics:
error: use of unassigned local `x`
  ┌─ tests/simplifier-elimination/use_before_assign.move:4:13
  │
4 │     let y = x;
  │             ^
